[gd_scene load_steps=10 format=3 uid="uid://dm87hs1nuhs4a"]

[ext_resource type="PackedScene" uid="uid://ch6uqin66i1v7" path="res://scenes/characters/fungy.tscn" id="1_hgrq5"]
[ext_resource type="PackedScene" uid="uid://dbmmns6td4imf" path="res://utilities/main_camera.tscn" id="2_jom2r"]
[ext_resource type="AudioStream" uid="uid://ctcummqyguj8a" path="res://assets/audios/music/track1.wav" id="3_3pyp3"]
[ext_resource type="PackedScene" uid="uid://catwxcsxi3ekw" path="res://scenes/playable-levels/level1/lvl 2.tscn" id="3_262j4"]
[ext_resource type="Script" path="res://scenes/playable-levels/level_manager.gd" id="4_8xk7p"]
[ext_resource type="PackedScene" uid="uid://4xeak4fuju45" path="res://scenes/playable-levels/level1/lvl 3.tscn" id="4_cj5bn"]
[ext_resource type="PackedScene" uid="uid://dvxesw5mdervj" path="res://scenes/playable-levels/level1/lvl 1.tscn" id="5_hgmnx"]
[ext_resource type="PackedScene" uid="uid://cqopqx2lf2trs" path="res://scenes/playable-levels/level1/lvl 4.tscn" id="5_pdefo"]
[ext_resource type="PackedScene" uid="uid://rmpkj0x32kte" path="res://scenes/playable-levels/transition.tscn" id="9_cqhoa"]

[node name="Game" type="Node2D"]

[node name="LevelManager" type="Node2D" parent="."]
script = ExtResource("4_8xk7p")
all_levels = Array[PackedScene]([ExtResource("5_hgmnx"), ExtResource("3_262j4"), ExtResource("4_cj5bn"), ExtResource("5_pdefo")])

[node name="Fungy" parent="." instance=ExtResource("1_hgrq5")]
position = Vector2(56, 31)

[node name="MainCamera" parent="." node_paths=PackedStringArray("node_to_follow") instance=ExtResource("2_jom2r")]
position = Vector2(56, 31)
limit_left = 0
limit_right = 384
limit_bottom = 576
node_to_follow = NodePath("../Fungy")

[node name="Track1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3pyp3")
volume_db = -25.0
autoplay = true

[node name="Transition" parent="." instance=ExtResource("9_cqhoa")]

[connection signal="animation_end" from="Transition" to="LevelManager" method="_on_transition_animation_end"]
